Revision history for Gimp-Perl extension.

1.095 Tue Jun 29 01:22:01 CEST 1999
	- finally cut support for gimp-1.0.2 and gtk-1.0,
          fix the underscore confusion in Gimp/Net.pm.

1.094 Fri Jun 25 01:21:17 CEST 1999
	- finally(?) fixed the runmode confusion by making these constants
          magic. Also hopefully fixed the error message.
	- enable embedded pod sections in standard register arguments.
        - improved scm2perl ever so slightly.
        - fixed xpm off-by-one bug in embedxpm (and added embedxpm).
        - fixed off-by-one error in Gimp::Fu and exmaples/PDB.

1.093 Tue Jun 15 21:48:48 CEST 1999
	- possible workaround for Gimp::Util::gimp_layer_get_position.
	- WRAP, SMEAR and BLACK were not being exported.
	- fixed small bug in pixelmap.
	- implemented gimp_query_procedure in XS.
	- scm2perl had broken cdr and cddr stubs...
        - fixed examples/font_table.
        - applied fixes from Lupe Christoph.
        - allow uppercase letters in hex colour specifications.
        - gimp_text_fontname ignored the image argument in
          compatibility mode (patch by Dov Grobgeld).
        - another solaris portability fix from Dov.
        - fixed xachshadows.

1.092 Wed Jun  2 14:52:29 CEST 1999
	- testsuite failed when !HAVE_PDL (and the whole package broke on
          systems with underpowered dynamic linkers).
        - gtk-1.0.x and gimp < 1.0.4 are no longer "officially" supported.
        - added COMPRESSION_*-constants for file_tiff.
        - added examples/pixelmap, needs doc!
        - probably fixed SIGPIPE problem in gimpdoc.
        - fixed pager bug in gimpdoc.
        - cleaned filehandle handling in Gimp/Net.pm.
        - streamlined config code again.
        - updated examples/parasite-editor, examples/mirrorsplit,
          examples/PDB.
        - Gimp::Net was broken (it used GIMP_PATH instead of just GIMP).

1.091 Sun May 23 13:21:34 CEST 1999
	- include a fake typemap.pdl.

1.09 Fri May 21 14:12:02 CEST 1999