@@ -12,7 +12,7 @@
 #include "perl.h"
 #include "XSUB.h"
 #define NEED_newCONSTSUB
-#include "ppport.h"
+#include "gppport.h"
 
 #include <libgimp/gimpmodule.h>
 
