@@ -310,6 +310,27 @@ sub query {
                             [&Gimp::PARAM_INT32, "flags", "internal flags (must be 0)"],
                             [&Gimp::PARAM_INT32, "extra", "multi-purpose ;)"],
                            ],[]);
+
+   Gimp->install_procedure("gimp_procedural_db_constant_register", "Register a plug-in specific integer constant",
+                           "Plug-ins should register their custom constants using this function, so".
+                           "other plug-ins (notably script-languages) can access these using symbolic names",
+                           "Marc Lehmann <pcg\@goof.com>", "Marc Lehmann", "1999-07-07",
+                           "<None>", "*",&Gimp::PROC_EXTENSION,
+                           [
+                            [&Gimp::PARAM_STRING, "procedure", "The name of the function that uses this constant"],
+                            [&Gimp::PARAM_STRING, "arg_num", "The name of the argument that this constant is used for"],
+                            [&Gimp::PARAM_STRING, "constant_name", "The name of the constant, should be all-uppercase"],
+                            [&Gimp::PARAM_INT32,  "constant_value", "The (integer) value for this constant"],
+                           ],[]);
+   Gimp->install_procedure("gimp_procedural_db_set_default", "Set the default value for a plug-in argument",
+                           "Plug-ins should register default values for their arguments",
+                           "Marc Lehmann <pcg\@goof.com>", "Marc Lehmann", "1999-07-07",
+                           "<None>", "*",&Gimp::PROC_EXTENSION,
+                           [
+                            [&Gimp::PARAM_STRING, "procedure", "The name of the function that uses this constant"],
+                            [&Gimp::PARAM_STRING, "arg_num", "The name of the argument that this constant is used for"],
+                            [&Gimp::PARAM_INT32,  "default_value", "The default value for this constant"],
+                           ],[]);
 }
 
 sub quit {
